first leauning and save jupyternotebook

--- a/openpyxl.ipynb
+++ b/openpyxl.ipynb
@@ -2,41 +2,143 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#installation openpyxl\n",
+    "from openpyxl import Workbook\n",
+    "import pandas as pd\n",
+    "wb = Workbook() #create a new workbook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ws = wb.active #get the active worksheet\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ws1 = wb.create_steet(\"My_sheet\") #insert at the end\n",
+    "ws2 = wb.create_sheet(\"My_sheet\",0) #insert at fist position\n",
+    "ws3 = wb.create_sheet(\"My_sheet\",1) #insert at the penultimate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ws.title = \"New_Title\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ws3 = wb[\"New_Title\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                       42  Unnamed: 1  Unnamed: 2\n",
-      "0 2024-02-08 13:37:55.098           2           3\n"
+      "<openpyxl.workbook.workbook.Workbook object at 0x116c1c890>\n"
      ]
     }
    ],
    "source": [
-    "from openpyxl import Workbook\n",
-    "import pandas as pd\n",
-    "wb = Workbook()\n",
-    "\n",
-    "# grab the active worksheet\n",
-    "ws = wb.active\n",
-    "\n",
-    "# Data can be assigned directly to cells\n",
-    "ws['A1'] = 42\n",
-    "\n",
-    "# Rows can also be appended\n",
-    "ws.append([1, 2, 3])\n",
-    "\n",
-    "# Python types will automatically be converted\n",
-    "import datetime\n",
-    "ws['A3'] = datetime.datetime.now()\n",
-    "\n",
-    "# Save the file\n",
-    "wb.save(\"sample.xlsx\")\n",
-    "sample = pd.read_excel(\"sample.xlsx\")\n",
-    "print(sample)\n",
-    "\n"
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['My_sheet1', 'My_sheet2', 'New_Title', 'My_sheet']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(wb.sheetnames)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My_sheet1\n",
+      "My_sheet2\n",
+      "New_Title\n",
+      "My_sheet\n"
+     ]
+    }
+   ],
+   "source": [
+    "for sheet in wb:\n",
+    "    print(sheet.title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Worksheet \"My_sheet1 Copy1\">\n"
+     ]
+    }
+   ],
+   "source": [
+    "source = wb.active\n",
+    "target = wb.copy_worksheet(source)\n",
+    "print(target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My_sheet1 Copy1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(target.title)"
    ]
   },
   {
