--- a/재고관리용편집.ipynb
+++ b/재고관리용편집.ipynb
@@ -2,32 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              Unnamed: 2 Unnamed: 5 Unnamed: 6 Unnamed: 7 Unnamed: 8  \\\n",
-      "581  2024-02-06 00:00:00          화         91        107         13   \n",
-      "582  2024-02-07 00:00:00          수         78         88          1   \n",
-      "583  2024-02-07 00:00:00          수        NaN        NaN        NaN   \n",
-      "584  2024-02-07 00:00:00          수         90        100          5   \n",
-      "585  2024-02-07 00:00:00          수         10         10         10   \n",
-      "\n",
-      "    Unnamed: 10  \n",
-      "581         604  \n",
-      "582         692  \n",
-      "583         692  \n",
-      "584         692  \n",
-      "585         692  \n",
-      "파일 저장이 취소되었습니다.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "from datetime import datetime\n",
+    "\n",
     "\n",
     "def save_excel_with_user_confirmation(df, file_path):\n",
     "    # 함수 내부에서 사용자 입력 받기\n",
@@ -49,27 +30,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              Unnamed: 2 Unnamed: 5 Unnamed: 6 Unnamed: 7 Unnamed: 8  \\\n",
-      "580  2024-02-05 00:00:00          월         93         86          4   \n",
-      "581  2024-02-06 00:00:00          화         91        107         13   \n",
-      "582  2024-02-07 00:00:00          수         78         88          1   \n",
-      "583  2024-02-07 00:00:00          수        NaN        NaN        NaN   \n",
-      "584  2024-02-07 00:00:00          수         90        100          5   \n",
-      "\n",
-      "    Unnamed: 10  \n",
-      "580         497  \n",
-      "581         604  \n",
-      "582         692  \n",
-      "583         692  \n",
-      "584         692  \n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>날짜</th>\n",
+       "      <th>요일</th>\n",
+       "      <th>객수</th>\n",
+       "      <th>매출</th>\n",
+       "      <th>현금</th>\n",
+       "      <th>합계</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>575</th>\n",
+       "      <td>2024-01-31</td>\n",
+       "      <td>수</td>\n",
+       "      <td>90</td>\n",
+       "      <td>81</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2899</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>576</th>\n",
+       "      <td>2024-02-01</td>\n",
+       "      <td>목</td>\n",
+       "      <td>64</td>\n",
+       "      <td>60</td>\n",
+       "      <td>4</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>577</th>\n",
+       "      <td>2024-02-02</td>\n",
+       "      <td>금</td>\n",
+       "      <td>101</td>\n",
+       "      <td>103</td>\n",
+       "      <td>1</td>\n",
+       "      <td>163</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>578</th>\n",
+       "      <td>2024-02-03</td>\n",
+       "      <td>토</td>\n",
+       "      <td>122</td>\n",
+       "      <td>107</td>\n",
+       "      <td>2</td>\n",
+       "      <td>270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>579</th>\n",
+       "      <td>2024-02-04</td>\n",
+       "      <td>일</td>\n",
+       "      <td>127</td>\n",
+       "      <td>141</td>\n",
+       "      <td>3</td>\n",
+       "      <td>411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>580</th>\n",
+       "      <td>2024-02-05</td>\n",
+       "      <td>월</td>\n",
+       "      <td>93</td>\n",
+       "      <td>86</td>\n",
+       "      <td>4</td>\n",
+       "      <td>497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>581</th>\n",
+       "      <td>2024-02-06</td>\n",
+       "      <td>화</td>\n",
+       "      <td>91</td>\n",
+       "      <td>107</td>\n",
+       "      <td>13</td>\n",
+       "      <td>604</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>582</th>\n",
+       "      <td>2024-02-07</td>\n",
+       "      <td>수</td>\n",
+       "      <td>78</td>\n",
+       "      <td>88</td>\n",
+       "      <td>1</td>\n",
+       "      <td>692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>583</th>\n",
+       "      <td>2024-02-07</td>\n",
+       "      <td>수</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>584</th>\n",
+       "      <td>2024-02-07</td>\n",
+       "      <td>수</td>\n",
+       "      <td>90</td>\n",
+       "      <td>100</td>\n",
+       "      <td>5</td>\n",
+       "      <td>692</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            날짜 요일   객수   매출   현금    합계\n",
+       "575 2024-01-31  수   90   81    1  2899\n",
+       "576 2024-02-01  목   64   60    4    60\n",
+       "577 2024-02-02  금  101  103    1   163\n",
+       "578 2024-02-03  토  122  107    2   270\n",
+       "579 2024-02-04  일  127  141    3   411\n",
+       "580 2024-02-05  월   93   86    4   497\n",
+       "581 2024-02-06  화   91  107   13   604\n",
+       "582 2024-02-07  수   78   88    1   692\n",
+       "583 2024-02-07  수  NaN  NaN  NaN   692\n",
+       "584 2024-02-07  수   90  100    5   692"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -77,61 +181,204 @@
     "file_path = '/Users/idaejong/Library/CloudStorage/OneDrive-개인/약국결산폴더/이번달 결산 복사본.xlsx'\n",
     "# 판다스를 이용해 엑셀 파일 불러오기\n",
     "df = pd.read_excel(file_path, sheet_name='매출')\n",
+    "# 인덱싱\n",
+    "df.rename(columns={\n",
+    "    'Unnamed: 2': '날짜',\n",
+    "    'Unnamed: 5': '요일',\n",
+    "    'Unnamed: 6': '객수',\n",
+    "    'Unnamed: 7': '매출',\n",
+    "    'Unnamed: 8': '현금',\n",
+    "    'Unnamed: 10': '합계'\n",
+    "}, inplace=True)\n",
     "\n",
-    "# 변경 후 다시 선택된 열의 마지막 10행을 selected_columns에 할당\n",
-    "selected_columns = df[['Unnamed: 2', 'Unnamed: 5', 'Unnamed: 6', 'Unnamed: 7', 'Unnamed: 8', 'Unnamed: 10']].tail(5)\n",
+    "#2열에 날짜값을 표시 하기\n",
+    "df['날짜'] = pd.to_datetime(df['날짜'], format='%Y-%m-%d', errors='coerce')\n",
     "\n",
-    "# 변경된 selected_columns 출력\n",
-    "print(selected_columns)\n"
+    "\n",
+    "# 변경 후 다시 선택된 열의 마지막 10행을 table에 할당\n",
+    "table = df[['날짜', '요일', '객수', '매출', '현금', '합계']].tail(10)\n",
+    "\n",
+    "# 변경된 table 출력\n",
+    "table\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>날짜</th>\n",
+       "      <th>요일</th>\n",
+       "      <th>객수</th>\n",
+       "      <th>매출</th>\n",
+       "      <th>현금</th>\n",
+       "      <th>합계</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>577</th>\n",
+       "      <td>2024-02-02</td>\n",
+       "      <td>금</td>\n",
+       "      <td>101</td>\n",
+       "      <td>103</td>\n",
+       "      <td>1</td>\n",
+       "      <td>163</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>578</th>\n",
+       "      <td>2024-02-03</td>\n",
+       "      <td>토</td>\n",
+       "      <td>122</td>\n",
+       "      <td>107</td>\n",
+       "      <td>2</td>\n",
+       "      <td>270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>579</th>\n",
+       "      <td>2024-02-04</td>\n",
+       "      <td>일</td>\n",
+       "      <td>127</td>\n",
+       "      <td>141</td>\n",
+       "      <td>3</td>\n",
+       "      <td>411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>580</th>\n",
+       "      <td>2024-02-05</td>\n",
+       "      <td>월</td>\n",
+       "      <td>93</td>\n",
+       "      <td>86</td>\n",
+       "      <td>4</td>\n",
+       "      <td>497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>581</th>\n",
+       "      <td>2024-02-06</td>\n",
+       "      <td>화</td>\n",
+       "      <td>91</td>\n",
+       "      <td>107</td>\n",
+       "      <td>13</td>\n",
+       "      <td>604</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>582</th>\n",
+       "      <td>2024-02-07</td>\n",
+       "      <td>수</td>\n",
+       "      <td>78</td>\n",
+       "      <td>88</td>\n",
+       "      <td>1</td>\n",
+       "      <td>692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>583</th>\n",
+       "      <td>2024-02-07</td>\n",
+       "      <td>수</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>584</th>\n",
+       "      <td>2024-02-07</td>\n",
+       "      <td>수</td>\n",
+       "      <td>90</td>\n",
+       "      <td>100</td>\n",
+       "      <td>5</td>\n",
+       "      <td>692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>585</th>\n",
+       "      <td>2024-02-08</td>\n",
+       "      <td>수</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>586</th>\n",
+       "      <td>2024-02-08</td>\n",
+       "      <td>수</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>692</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            날짜 요일   객수   매출   현금   합계\n",
+       "577 2024-02-02  금  101  103    1  163\n",
+       "578 2024-02-03  토  122  107    2  270\n",
+       "579 2024-02-04  일  127  141    3  411\n",
+       "580 2024-02-05  월   93   86    4  497\n",
+       "581 2024-02-06  화   91  107   13  604\n",
+       "582 2024-02-07  수   78   88    1  692\n",
+       "583 2024-02-07  수  NaN  NaN  NaN  692\n",
+       "584 2024-02-07  수   90  100    5  692\n",
+       "585 2024-02-08  수   10   10   10  692\n",
+       "586 2024-02-08  수   10   10   10  692"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "# 사용자 입력 받기\n",
     "inp1 = input(\"객수: \")\n",
     "inp2 = input(\"매출: \")\n",
     "inp3 = input(\"현금: \")\n",
-    "\n",
+    "inp4 = datetime.now().strftime('%Y-%m-%d')\n",
     "# 마지막 행 인덱스 찾기\n",
     "last_row_index = df.index[-1]\n",
     "\n",
     "# 새로운 행에 데이터 할당\n",
     "df.loc[last_row_index + 1] = df.loc[last_row_index].values  # 기존 마지막 행의 값을 새로운 행에 복사\n",
-    "df.at[last_row_index + 1, 'Unnamed: 6'] = inp1\n",
-    "df.at[last_row_index + 1, 'Unnamed: 7'] = inp2\n",
-    "df.at[last_row_index + 1, 'Unnamed: 8'] = inp3\n",
+    "df.at[last_row_index + 1, '객수'] = inp1\n",
+    "df.at[last_row_index + 1, '매출'] = inp2\n",
+    "df.at[last_row_index + 1, '현금'] = inp3\n",
+    "df.at[last_row_index + 1, '날짜'] = inp4\n",
     "\n",
-    "save_excel_with_user_confirmation(df, file_path)\n",
-    "\n"
+    "table = df[['날짜', '요일', '객수', '매출', '현금', '합계']].tail(10)\n",
+    "\n",
+    "table \n",
+    "\n",
+    "# save_excel_with_user_confirmation(df, file_path)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              Unnamed: 2 Unnamed: 5 Unnamed: 6 Unnamed: 7 Unnamed: 8  \\\n",
-      "581  2024-02-06 00:00:00          화         91        107         13   \n",
-      "582  2024-02-07 00:00:00          수         78         88          1   \n",
-      "583  2024-02-07 00:00:00          수        NaN        NaN        NaN   \n",
-      "584  2024-02-07 00:00:00          수         90        100          5   \n",
-      "\n",
-      "    Unnamed: 10  \n",
-      "581         604  \n",
-      "582         692  \n",
-      "583         692  \n",
-      "584         692  \n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -142,10 +389,9 @@
    ],
    "source": [
     "#마지막줄 삭제 \n",
-    "del_selected_columns = selected_columns.drop(last_row_index + 1, axis=0)\n",
-    "print(del_selected_columns\n",
-    "save_excel_with_user_confirmation(df, file_path)\n",
-    "\n"
+    "del_selected_columns = table.drop(last_row_index + 1, axis=0)\n",
+    "del_selected_columns\n",
+    "save_excel_with_user_confirmation(df, file_path)\n"
    ]
   },
   {
